fixing difficulty z-index bug

--- a/nezal-ar/public/city-defender/css/intro/intro.css
+++ b/nezal-ar/public/city-defender/css/intro/intro.css
@@ -349,6 +349,7 @@
   height : 330px;
   text-align:left;
   text-transform:capitalize;
+  z-index:1000;
 }
 #levels,#extraLevels
 {
